[package]
name = "shmlib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type= [ "cdylib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lua = "0.0.10"
shared_memory = "0.12.4"
widestring = "1.0.2"
[dependencies.windows]
version = "0.39.0"
features = [
   "Data_Xml_Dom",
   "Win32_Foundation",
   "Win32_Security",
   "Win32_System_Threading",
   "Win32_UI_WindowsAndMessaging",
   "Win32_System_Memory",
]
